--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <nav class="navbar">
         <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
         <a href="#education">Education</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
@@ -31,9 +32,9 @@
         <span>Undergraduate Student</span></h3>
         <p>Saya adalah seorang mahasiswa energik dan penuh semangat yang sedang menempuh studi di Jurusan Informatika Universitas Jenderal Soedirman, saya memiliki ketertarikan dan berusaha mengasah keterampilan di bidang Web Development selama menjadi mahasiswa Informatika.</p>
         <div class="social-icons">
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
-            <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="https://linkedin.com/in/saniaprillia-anjani"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/saniaprl"><i class='bx bxl-github'></i></a>
+            <a href="https://www.instagram.com/s.saniaprl"><i class='bx bxl-instagram-alt'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
         </div>
 
@@ -44,6 +45,24 @@
         <div class="home-img">
             <img src="img.jpg" alt="">
         </div>
+   </section>
+
+   <section class="about" id="about">
+    <h2 class="heading">About <span>Me</span></h2>
+    <div class="about-box">
+        <div class="about-info">
+            <h4>Nama Lengkap</h4>
+            <p>Sani Aprillia Anjani</p>
+        </div>
+        <div class="about-info">
+            <h4>Tanggal Lahir</h4>
+            <p>14 April 2006</p>
+        </div>
+        <div class="about-info">
+            <h4>Alamat</h4>
+            <p>DUSUN 1 RT/RW 001/006 Pesawahan, Kec. Rawalo, Kab. Banyumas, Jawa Tengah</p>
+        </div>
+    </div>
    </section>
 
    <section class="education" id="education">
@@ -80,6 +99,38 @@
     </div>
    </section>
 
+    <section class="experience" id="experience">
+        <h2 class="heading">Experience</h2>
+
+        <div class="experience-container">
+            <div class="experience-box">
+                <div class="experience-info">
+                    <h4>Unit Kesehatan Palang Merah Remaja 2023/2024</h4>
+                </div>
+            </div>   
+
+            <div class="experience-box">
+                <div class="experience-info">
+                    <h4>Staff Divisi P3K Informatics Championship 2024</h4>
+                </div>
+            </div>   
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <div class="social">
+            <a href="#"><i class='bx bxl-linkedin'></i>
+            <h4>LinkedIn</h4></a>
+            <a href="#"><i class='bx bxl-github'></i>
+            <h4>GitHub</h4></a>
+            <a href="#"><i class='bx bxl-instagram-alt'></i>
+            <h4>Instagram</h4></a>
+            <a href="#"><i class='bx bxl-twitter'></i>
+            <h4>Twitter</h4></a>
+        </div>
+    </section>
 
    <sript src="script.js"></sript>
 </body>
