--- a/psp.html
+++ b/psp.html
@@ -3,187 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <style>
-        * {
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-            color: rgb(62, 54, 54);
-        }
-        body{
-            width: 100%;
-            height: 100%;
-            background-color: #e7cca3;
-        }
-        .navbar{
-            display: flex;
-            height: 80px;
-            width: 100%;
-            background-color: #c79a6353;
-            position: relative; /* Make it stay on top */
-            z-index: 2;
-        }
-        .navigasi{
-            height: 100%;
-        }
-        .navigasi{
-            width: 100%;
-            display: flex;
-            justify-content: center; /* Mencentral secara horizontal */
-            align-items: center; /* Mencentral secara vertikal */
-        }
-        
-        .navigasi ul{
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 80px;
-        }
-        .navigasi li{
-            text-decoration: none;
-            display: inline;
-        }
-        .navigasi ul li a{
-            text-decoration: none;
-            color: #ffffff;
-            font-weight: 600;
-            font-size: 24px;
-        }
-        .navigasi ul li a:hover{
-            color: #030202;
-        }
-
-        .content{
-            display: flex;
-            width: 100%;
-            height: 700px;
-        }
-        .left{
-            width: 50%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            padding: 0px 80px;
-            color: #040303;
-            z-index: 2; /* Supaya teks tetap di atas gambar */
-        }
-        .left h2{
-            margin-top: -10px;
-        }
-        .left p{
-            font-size: 20px;
-            font-weight: 300;
-            text-align: justify;
-            color: #2b2c3a;
-            margin-top: 5px;
-        }
-        .left button{
-            padding: 15px 25px;
-            background-color: #6246EA;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            font-size: 20px;
-            font-weight: 600;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-        .left button:hover{
-            background-color: #4D3ABF;
-        }
-        .right{
-            width: 50%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .right img{
-            object-fit: cover;
-            border-radius: 50%;
-        }
-        .project{
-            width: 100%;
-            margin-top: 80px;
-        }
-        .project h1{
-            text-align: center;
-            font-size: 40px;
-            font-weight: 600;
-            margin-bottom: 40px;
-        }
-        .card{
-            width: 30%;
-            padding: 20px;
-            margin: 20px;
-            background-color:#cf9d5b ;
-            border-radius: 10px;
-        }
-        .pembungkus-card{
-            display: flex;
-        }
-    </style>
+    <title>Responsive Portofolio Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="navbar">
-        <div class="navigasi">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Project</a></li>
-                <li><a href="#">About</a></li>
-            </ul>
+    
+   <header class="header">
+    <a href="#home" class="logo">Sani 
+    <span>Aprillia</span>
+    <span>Anjani</span></a>
+
+    <i class='bx bx-menu' id="menu-icon"></i>
+
+    <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#education">Education</a>
+        <a href="#experience">Experience</a>
+        <a href="#contact">Contact</a>
+    </nav>
+   </header>
+
+   <section class="home" id="home">
+    <div class="home-content">
+        <h1>Hi, It's <span>Sani</span></h1>
+        <h3 class="text-animation">I'm an<span></span> 
+        <span>Undergraduate Student</span></h3>
+        <p>Saya adalah seorang mahasiswa energik dan penuh semangat yang sedang menempuh studi di Jurusan Informatika Universitas Jenderal Soedirman, saya memiliki ketertarikan dan berusaha mengasah keterampilan di bidang Web Development selama menjadi mahasiswa Informatika.</p>
+        <div class="social-icons">
+            <a href="https://linkedin.com/in/saniaprillia-anjani"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/saniaprl"><i class='bx bxl-github'></i></a>
+            <a href="https://www.instagram.com/s.saniaprl"><i class='bx bxl-instagram-alt'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+        </div>
+
+        <div class="btn-group">
+            <a href="#contact" class="btn">Contact</a>
         </div>
     </div>
-    <hr>
-    <div class="content">
-        <div class="left">
-            <h1 style="font-size: 40px;">Sani Aprillia Anjani</h1>
-            <p>Saya adalah seorang mahasiswa energik dan penuh semangat yang sedang menempuh studi di Jurusan Informatika Universitas Jenderal Soedirman, saya memiliki ketertarikan dan berusaha mengasah keterampilan di bidang Web Development selama menjadi mahasiswa Informatika.</p>
-            <a href="https://www.linkedin.com/in/saniaprillia-anjani?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app "><button>LinkedIn</button></a>
+        <div class="home-img">
+            <img src="img.jpg" alt="">
         </div>
-        <div class="right">
-            <img src="sani.jpg" width="400px" height="500px">
+   </section>
+
+   <section class="about" id="about">
+    <h2 class="heading">About <span>Me</span></h2>
+    <div class="about-box">
+        <div class="about-info">
+            <h4>Nama Lengkap</h4>
+            <p>Sani Aprillia Anjani</p>
         </div>
-    </div>
-    <hr>
-    <div class="project">
-        <h1>About</h1>
-        <div class="pembungkus-card">
-            <div class="card">
-                <h3>Pendidikan</h3>
-                <p style="text-align: justify;">
-                    <div>SDN Pesawahan</div>
-                    <div>SMPN 1 Rawalo</div>
-                    <div>SMAN 1 Rawalo</div>
-                    <div>Mahasiswa Universitas Jenderal Soedirman</div>
-                </p>
-            </div>
-            <div class="card">
-                <h3>Kontak</h3>
-                <p style="text-align: justify;">
-                    <div>Instagram: s.saniaprll</div>
-                    <div>Email: sanianjani65@gmail.com</div>
-                    <div>Twitter: ssunnfl</div>
-                </p>
-            </div>
-            <div class="card">
-                <h3>Pengalaman</h3>
-                <p style="text-align: justify;">
-                    <div>Unit Kesehatan PMR</div>
-                    <div>Staff divisi P3K Informatics Championship</div>
-                </p>
-            </div>
+        <div class="about-info">
+            <h4>Tanggal Lahir</h4>
+            <p>14 April 2006</p>
+        </div>
+        <div class="about-info">
+            <h4>Alamat</h4>
+            <p>DUSUN 1 RT/RW 001/006 Pesawahan, Kec. Rawalo, Kab. Banyumas, Jawa Tengah</p>
         </div>
     </div>
+   </section>
+
+   <section class="education" id="education">
+    <h2 class="heading">Education</h2>
+
+    <div class="timeline-items">
+
+        <div class="timeline-items">
+            <div class="timeline-dot">
+                <div class="timeline-date">2012</div>
+                <div class="timeline-content">
+                    <h3>SDN Pesawahan</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="timeline-items">
+            <div class="timeline-dot">
+                <div class="timeline-date">2018</div>
+                <div class="timeline-content">
+                    <h3>SMPN 1 Rawalo</h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="timeline-items">
+            <div class="timeline-dot">
+                <div class="timeline-date">2021</div>
+                <div class="timeline-content">
+                    <h3>SMAN 1 Rawalo</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+   </section>
+
+    <section class="experience" id="experience">
+        <h2 class="heading">Experience</h2>
+
+        <div class="experience-container">
+            <div class="experience-box">
+                <div class="experience-info">
+                    <h4>Unit Kesehatan Palang Merah Remaja 2023/2024</h4>
+                </div>
+            </div>   
+
+            <div class="experience-box">
+                <div class="experience-info">
+                    <h4>Staff Divisi P3K Informatics Championship 2024</h4>
+                </div>
+            </div>   
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me</span></h2>
+
+        <div class="social">
+            <a href="#"><i class='bx bxl-linkedin'></i>
+            <h4>LinkedIn</h4></a>
+            <a href="#"><i class='bx bxl-github'></i>
+            <h4>GitHub</h4></a>
+            <a href="#"><i class='bx bxl-instagram-alt'></i>
+            <h4>Instagram</h4></a>
+            <a href="#"><i class='bx bxl-twitter'></i>
+            <h4>Twitter</h4></a>
+        </div>
+    </section>
+
 </body>
 </html>
